[gd_scene load_steps=13 format=3 uid="uid://l2open12xuf5"]

[ext_resource type="AudioStream" uid="uid://2lq0fhy1b4a7" path="res://audio/switch blade 2.wav" id="1_gbdfy"]
[ext_resource type="Script" uid="uid://dmh7bkr83vkb1" path="res://scripts/SoundManager.gd" id="1_s6peo"]
[ext_resource type="AudioStream" uid="uid://ckiivgt1e4fan" path="res://audio/strap tighten 1.wav" id="3_shlr6"]
[ext_resource type="AudioStream" uid="uid://ur0ktys0nuw2" path="res://audio/small metal case closed 1.wav" id="4_5lwbd"]
[ext_resource type="AudioStream" uid="uid://bxbp6h5bwsiyw" path="res://audio/explosion.wav" id="5_ro3ww"]
[ext_resource type="AudioStream" uid="uid://cvkk6bltbyof" path="res://audio/time_for_adventure.mp3" id="5_v1pt3"]
[ext_resource type="AudioStream" uid="uid://c6p0ola4eesk7" path="res://audio/wood hit 1.wav" id="7_mpi5b"]
[ext_resource type="AudioStream" uid="uid://chhuaeuyd50q" path="res://audio/toaster hit 3.wav" id="8_aa63w"]
[ext_resource type="AudioStream" uid="uid://dp87xe6eho0r8" path="res://audio/sand foley 4.wav" id="9_k1d7a"]
[ext_resource type="AudioStream" uid="uid://bjcpn1mkugry2" path="res://audio/hurt.wav" id="9_wwv6j"]
[ext_resource type="AudioStream" uid="uid://bogwfh5jget1g" path="res://audio/coin.wav" id="11_55or6"]
[ext_resource type="AudioStream" uid="uid://4ulkebdsivif" path="res://audio/roblox-death-sound-sound-effect-(hd)-made-with-Voicemod.mp3" id="12_55or6"]

[node name="SoundManager" type="Node2D"]
process_mode = 3
script = ExtResource("1_s6peo")

[node name="ButtonSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_gbdfy")

[node name="KitbookButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_shlr6")

[node name="UnlockSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5lwbd")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_v1pt3")
volume_db = -15.127
autoplay = true
parameters/looping = true

[node name="LaserFire" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ro3ww")
volume_db = -4.727
pitch_scale = 0.64

[node name="BulletFire" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_mpi5b")

[node name="CopterDown" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_aa63w")

[node name="TermiteDown" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_wwv6j")

[node name="Stomp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_k1d7a")

[node name="GainHp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_55or6")

[node name="CopterHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_aa63w")
volume_db = -10.0

[node name="BuffMiteDown" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_55or6")
pitch_scale = 0.2
